--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <!-- image -->
                 <div class="image">
-                    <img src="profile.png" alt="">
+                    <img src="profile.png" alt="HARSHAD">
                 </div>
             </div>
 
