--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    
+    <link rel="stylesheet" href="./css/style.css">
+  
 </head>
 <body>
+    <div class="contact">
+    <h1 align="center">CONTACT ME</h1>
+    <hr>
+    <hr>
+    </div>
     <h1>hello friends!! my name is harshad and if you have any query about web development then please contact me</h1><br><br>
-    <h2>contact no.</h3><br>
-    <h1>8767896591</h1>
+   <div class="box">
+    <h2 align="center">Let's Chat with me </h3>
+   </div>   
+   <br>
+   <br>
+    <h2 align="center">contact no.</h3>
+        <br>
+    <h1 align="center">8767896591</h1>
 </body>
 </html>
